CompiTPE/src/compiTPE/y.output
   0  $accept : programa $end

   1  programa : nombre_programa bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END ';'
   2           | error ';'

   3  nombre_programa : ID

   4  nombre_ambito : ID

   5  bloque_sentencias_declarativas : sentencia_declarativa
   6                                 | bloque_sentencias_declarativas sentencia_declarativa

   7  sentencia_declarativa : declaracionDatos
   8                        | declaracionNuevoTipo
   9                        | declaracionFuncion

  10  declaracionDatos : tipo conjunto_declaracion_variables ';'
  11                   | nombre_typedef conjunto_declaracion_variables ';'

  12  nombre_typedef : ID

  13  conjunto_declaracion_variables : conjunto_declaracion_variables ',' nombre_declaracion
  14                                 | nombre_declaracion

  15  nombre_declaracion : ID

  16  declaracionNuevoTipo : TYPEDEF nombre_funcion_typedef '=' encabezado_funcion_typedef ';'

  17  nombre_funcion_typedef : ID

  18  encabezado_funcion_typedef : tipo FUNC '(' tipo ')'

  19  declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'
  20                     | cabeza_funcion bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'

  21  cabeza_funcion : tipo FUNC nombre_ambito parametro

  22  pre_condicion : PRE ':' '(' condicion ')' ',' CADENA ';'
  23                | PRE ':' condicion ')' ',' CADENA ';'
  24                | PRE ':' '(' ')' ',' CADENA ';'
  25                | PRE ':' '(' condicion ',' CADENA ';'
  26                | PRE ':' '(' condicion ')' CADENA ';'
  27                | PRE ':' '(' condicion ')' ',' ';'

  28  parametro : '(' tipo nombre_parametro ')'
  29            | tipo ID ')'
  30            | '(' ID ')'
  31            | '(' tipo ')'
  32            | '(' ')'
  33            | '(' tipo ID

  34  nombre_parametro : ID

  35  retorno : '(' expresion ')'
  36          | expresion ')'
  37          | '(' expresion

  38  bloque_sentencias_ejecutables : sentencia_ejecutable
  39                                | BEGIN conjunto_sentencia_ejecutable END ';'
  40                                | error ';'

  41  conjunto_sentencia_ejecutable : sentencia_ejecutable
  42                                | sentencia_ejecutable conjunto_sentencia_ejecutable

  43  sentencia_ejecutable : asignacion
  44                       | mensaje_pantalla
  45                       | clausula_seleccion_if
  46                       | sentencia_control_repeat

  47  invocacion_funcion : nombre_invocacion '(' factor ')'

  48  nombre_invocacion : ID

  49  asignacion : operador_asignacion ":=" expresioncompuesta ';'
  50             | operador_asignacion expresioncompuesta ';'

  51  operador_asignacion : ID

  52  expresioncompuesta : '(' expresion ')'
  53                     | expresion
  54                     | expresion ')'
  55                     | '(' expresion

  56  expresion : expresion '+' termino
  57            | expresion '-' termino
  58            | termino

  59  termino : termino '/' factor
  60          | termino '*' factor
  61          | factor
  62          | termino '/' invocacion_funcion
  63          | termino '*' invocacion_funcion
  64          | invocacion_funcion

  65  factor : ID
  66         | CTE
  67         | '-' CTE

  68  tipo : INT
  69       | SINGLE

  70  clausula_seleccion_if : IF '(' condicion ')' cuerpo_if ENDIF ';'
  71                        | IF condicion ')' cuerpo_if ENDIF ';'
  72                        | IF '(' condicion cuerpo_if ENDIF ';'

  73  cuerpo_if : cuerpo_then
  74            | cuerpo_then cuerpo_else

  75  cuerpo_then : THEN bloque_sentencias_ejecutables
  76              | bloque_sentencias_ejecutables

  77  cuerpo_else : ELSE bloque_sentencias_ejecutables

  78  condicion : expresion
  79            | condicion operador_logico expresion

  80  operador_logico : "||"
  81                  | "&&"
  82                  | "<>"
  83                  | "=="
  84                  | "<="
  85                  | ">="
  86                  | '>'
  87                  | '<'

  88  mensaje_pantalla : PRINT '(' CADENA ')' ';'
  89                   | PRINT CADENA ')' ';'
  90                   | PRINT '(' CADENA ';'

  91  sentencia_control_repeat : REPEAT '(' declaracion_repeat ')' BEGIN conjunto_sentencias_repeat END ';'

  92  conjunto_sentencias_repeat : BREAK ';'
  93                             | sentencia_ejecutable
  94                             | sentencia_ejecutable conjunto_sentencias_repeat

  95  declaracion_repeat : asignacion_repeat ';' condicion_repeat ';' CTE

  96  asignacion_repeat : variable_repeat '=' CTE

  97  variable_repeat : ID

  98  condicion_repeat : ID operador_logico expresion

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	.  error

	programa  goto 3
	nombre_programa  goto 4


state 1
	programa : error . ';'  (2)

	';'  shift 5
	.  error


state 2
	nombre_programa : ID .  (3)

	.  reduce 3


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : nombre_programa . bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END ';'  (1)

	ID  shift 6
	INT  shift 7
	SINGLE  shift 8
	TYPEDEF  shift 9
	.  error

	bloque_sentencias_declarativas  goto 10
	sentencia_declarativa  goto 11
	declaracionDatos  goto 12
	declaracionNuevoTipo  goto 13
	declaracionFuncion  goto 14
	tipo  goto 15
	nombre_typedef  goto 16
	cabeza_funcion  goto 17


state 5
	programa : error ';' .  (2)

	.  reduce 2


state 6
	nombre_typedef : ID .  (12)

	.  reduce 12


state 7
	tipo : INT .  (68)

	.  reduce 68


state 8
	tipo : SINGLE .  (69)

	.  reduce 69


state 9
	declaracionNuevoTipo : TYPEDEF . nombre_funcion_typedef '=' encabezado_funcion_typedef ';'  (16)

	ID  shift 18
	.  error

	nombre_funcion_typedef  goto 19


state 10
	programa : nombre_programa bloque_sentencias_declarativas . BEGIN conjunto_sentencia_ejecutable END ';'  (1)
	bloque_sentencias_declarativas : bloque_sentencias_declarativas . sentencia_declarativa  (6)

	ID  shift 6
	BEGIN  shift 20
	INT  shift 7
	SINGLE  shift 8
	TYPEDEF  shift 9
	.  error

	sentencia_declarativa  goto 21
	declaracionDatos  goto 12
	declaracionNuevoTipo  goto 13
	declaracionFuncion  goto 14
	tipo  goto 15
	nombre_typedef  goto 16
	cabeza_funcion  goto 17


state 11
	bloque_sentencias_declarativas : sentencia_declarativa .  (5)

	.  reduce 5


state 12
	sentencia_declarativa : declaracionDatos .  (7)

	.  reduce 7


state 13
	sentencia_declarativa : declaracionNuevoTipo .  (8)

	.  reduce 8


state 14
	sentencia_declarativa : declaracionFuncion .  (9)

	.  reduce 9


state 15
	declaracionDatos : tipo . conjunto_declaracion_variables ';'  (10)
	cabeza_funcion : tipo . FUNC nombre_ambito parametro  (21)

	ID  shift 22
	FUNC  shift 23
	.  error

	conjunto_declaracion_variables  goto 24
	nombre_declaracion  goto 25


state 16
	declaracionDatos : nombre_typedef . conjunto_declaracion_variables ';'  (11)

	ID  shift 22
	.  error

	conjunto_declaracion_variables  goto 26
	nombre_declaracion  goto 25


state 17
	declaracionFuncion : cabeza_funcion . bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (19)
	declaracionFuncion : cabeza_funcion . bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (20)

	ID  shift 6
	INT  shift 7
	SINGLE  shift 8
	TYPEDEF  shift 9
	.  error

	bloque_sentencias_declarativas  goto 27
	sentencia_declarativa  goto 11
	declaracionDatos  goto 12
	declaracionNuevoTipo  goto 13
	declaracionFuncion  goto 14
	tipo  goto 15
	nombre_typedef  goto 16
	cabeza_funcion  goto 17


state 18
	nombre_funcion_typedef : ID .  (17)

	.  reduce 17


state 19
	declaracionNuevoTipo : TYPEDEF nombre_funcion_typedef . '=' encabezado_funcion_typedef ';'  (16)

	'='  shift 28
	.  error


state 20
	programa : nombre_programa bloque_sentencias_declarativas BEGIN . conjunto_sentencia_ejecutable END ';'  (1)

	ID  shift 29
	IF  shift 30
	PRINT  shift 31
	REPEAT  shift 32
	.  error

	conjunto_sentencia_ejecutable  goto 33
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39


state 21
	bloque_sentencias_declarativas : bloque_sentencias_declarativas sentencia_declarativa .  (6)

	.  reduce 6


state 22
	nombre_declaracion : ID .  (15)

	.  reduce 15


state 23
	cabeza_funcion : tipo FUNC . nombre_ambito parametro  (21)

	ID  shift 40
	.  error

	nombre_ambito  goto 41


state 24
	declaracionDatos : tipo conjunto_declaracion_variables . ';'  (10)
	conjunto_declaracion_variables : conjunto_declaracion_variables . ',' nombre_declaracion  (13)

	';'  shift 42
	','  shift 43
	.  error


state 25
	conjunto_declaracion_variables : nombre_declaracion .  (14)

	.  reduce 14


state 26
	declaracionDatos : nombre_typedef conjunto_declaracion_variables . ';'  (11)
	conjunto_declaracion_variables : conjunto_declaracion_variables . ',' nombre_declaracion  (13)

	';'  shift 44
	','  shift 43
	.  error


state 27
	bloque_sentencias_declarativas : bloque_sentencias_declarativas . sentencia_declarativa  (6)
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas . BEGIN conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (19)
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas . BEGIN pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (20)

	ID  shift 6
	BEGIN  shift 45
	INT  shift 7
	SINGLE  shift 8
	TYPEDEF  shift 9
	.  error

	sentencia_declarativa  goto 21
	declaracionDatos  goto 12
	declaracionNuevoTipo  goto 13
	declaracionFuncion  goto 14
	tipo  goto 15
	nombre_typedef  goto 16
	cabeza_funcion  goto 17


state 28
	declaracionNuevoTipo : TYPEDEF nombre_funcion_typedef '=' . encabezado_funcion_typedef ';'  (16)

	INT  shift 7
	SINGLE  shift 8
	.  error

	tipo  goto 46
	encabezado_funcion_typedef  goto 47


state 29
	operador_asignacion : ID .  (51)

	.  reduce 51


state 30
	clausula_seleccion_if : IF . '(' condicion ')' cuerpo_if ENDIF ';'  (70)
	clausula_seleccion_if : IF . condicion ')' cuerpo_if ENDIF ';'  (71)
	clausula_seleccion_if : IF . '(' condicion cuerpo_if ENDIF ';'  (72)

	ID  shift 48
	CTE  shift 49
	'('  shift 50
	'-'  shift 51
	.  error

	condicion  goto 52
	expresion  goto 53
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 57


state 31
	mensaje_pantalla : PRINT . '(' CADENA ')' ';'  (88)
	mensaje_pantalla : PRINT . CADENA ')' ';'  (89)
	mensaje_pantalla : PRINT . '(' CADENA ';'  (90)

	CADENA  shift 58
	'('  shift 59
	.  error


state 32
	sentencia_control_repeat : REPEAT . '(' declaracion_repeat ')' BEGIN conjunto_sentencias_repeat END ';'  (91)

	'('  shift 60
	.  error


state 33
	programa : nombre_programa bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable . END ';'  (1)

	END  shift 61
	.  error


state 34
	conjunto_sentencia_ejecutable : sentencia_ejecutable .  (41)
	conjunto_sentencia_ejecutable : sentencia_ejecutable . conjunto_sentencia_ejecutable  (42)

	ID  shift 29
	IF  shift 30
	PRINT  shift 31
	REPEAT  shift 32
	RETURN  reduce 41
	END  reduce 41

	conjunto_sentencia_ejecutable  goto 62
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39


state 35
	sentencia_ejecutable : asignacion .  (43)

	.  reduce 43


state 36
	sentencia_ejecutable : mensaje_pantalla .  (44)

	.  reduce 44


state 37
	sentencia_ejecutable : clausula_seleccion_if .  (45)

	.  reduce 45


state 38
	sentencia_ejecutable : sentencia_control_repeat .  (46)

	.  reduce 46


state 39
	asignacion : operador_asignacion . ":=" expresioncompuesta ';'  (49)
	asignacion : operador_asignacion . expresioncompuesta ';'  (50)

	ID  shift 48
	CTE  shift 49
	":="  shift 63
	'('  shift 64
	'-'  shift 51
	.  error

	expresion  goto 65
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	expresioncompuesta  goto 66
	termino  goto 57


state 40
	nombre_ambito : ID .  (4)

	.  reduce 4


state 41
	cabeza_funcion : tipo FUNC nombre_ambito . parametro  (21)

	INT  shift 7
	SINGLE  shift 8
	'('  shift 67
	.  error

	tipo  goto 68
	parametro  goto 69


state 42
	declaracionDatos : tipo conjunto_declaracion_variables ';' .  (10)

	.  reduce 10


state 43
	conjunto_declaracion_variables : conjunto_declaracion_variables ',' . nombre_declaracion  (13)

	ID  shift 22
	.  error

	nombre_declaracion  goto 70


state 44
	declaracionDatos : nombre_typedef conjunto_declaracion_variables ';' .  (11)

	.  reduce 11


state 45
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas BEGIN . conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (19)
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas BEGIN . pre_condicion conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (20)

	ID  shift 29
	IF  shift 30
	PRINT  shift 31
	REPEAT  shift 32
	PRE  shift 71
	.  error

	conjunto_sentencia_ejecutable  goto 72
	pre_condicion  goto 73
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39


state 46
	encabezado_funcion_typedef : tipo . FUNC '(' tipo ')'  (18)

	FUNC  shift 74
	.  error


state 47
	declaracionNuevoTipo : TYPEDEF nombre_funcion_typedef '=' encabezado_funcion_typedef . ';'  (16)

	';'  shift 75
	.  error


state 48
	nombre_invocacion : ID .  (48)
	factor : ID .  (65)

	error  reduce 65
	ID  reduce 65
	IF  reduce 65
	THEN  reduce 65
	PRINT  reduce 65
	BEGIN  reduce 65
	REPEAT  reduce 65
	"||"  reduce 65
	"&&"  reduce 65
	"<>"  reduce 65
	"=="  reduce 65
	"<="  reduce 65
	">="  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	';'  reduce 65
	','  reduce 65
	'('  reduce 48
	')'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'/'  reduce 65
	'*'  reduce 65


state 49
	factor : CTE .  (66)

	.  reduce 66


state 50
	clausula_seleccion_if : IF '(' . condicion ')' cuerpo_if ENDIF ';'  (70)
	clausula_seleccion_if : IF '(' . condicion cuerpo_if ENDIF ';'  (72)

	ID  shift 48
	CTE  shift 49
	'-'  shift 51
	.  error

	condicion  goto 76
	expresion  goto 53
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 57


state 51
	factor : '-' . CTE  (67)

	CTE  shift 77
	.  error


state 52
	clausula_seleccion_if : IF condicion . ')' cuerpo_if ENDIF ';'  (71)
	condicion : condicion . operador_logico expresion  (79)

	"||"  shift 78
	"&&"  shift 79
	"<>"  shift 80
	"=="  shift 81
	"<="  shift 82
	">="  shift 83
	'>'  shift 84
	'<'  shift 85
	')'  shift 86
	.  error

	operador_logico  goto 87


state 53
	expresion : expresion . '+' termino  (56)
	expresion : expresion . '-' termino  (57)
	condicion : expresion .  (78)

	'+'  shift 88
	'-'  shift 89
	error  reduce 78
	ID  reduce 78
	IF  reduce 78
	THEN  reduce 78
	PRINT  reduce 78
	BEGIN  reduce 78
	REPEAT  reduce 78
	"||"  reduce 78
	"&&"  reduce 78
	"<>"  reduce 78
	"=="  reduce 78
	"<="  reduce 78
	">="  reduce 78
	'>'  reduce 78
	'<'  reduce 78
	','  reduce 78
	')'  reduce 78


state 54
	termino : invocacion_funcion .  (64)

	.  reduce 64


state 55
	invocacion_funcion : nombre_invocacion . '(' factor ')'  (47)

	'('  shift 90
	.  error


state 56
	termino : factor .  (61)

	.  reduce 61


state 57
	expresion : termino .  (58)
	termino : termino . '/' factor  (59)
	termino : termino . '*' factor  (60)
	termino : termino . '/' invocacion_funcion  (62)
	termino : termino . '*' invocacion_funcion  (63)

	'/'  shift 91
	'*'  shift 92
	error  reduce 58
	ID  reduce 58
	IF  reduce 58
	THEN  reduce 58
	PRINT  reduce 58
	BEGIN  reduce 58
	REPEAT  reduce 58
	"||"  reduce 58
	"&&"  reduce 58
	"<>"  reduce 58
	"=="  reduce 58
	"<="  reduce 58
	">="  reduce 58
	'>'  reduce 58
	'<'  reduce 58
	';'  reduce 58
	','  reduce 58
	')'  reduce 58
	'+'  reduce 58
	'-'  reduce 58


state 58
	mensaje_pantalla : PRINT CADENA . ')' ';'  (89)

	')'  shift 93
	.  error


state 59
	mensaje_pantalla : PRINT '(' . CADENA ')' ';'  (88)
	mensaje_pantalla : PRINT '(' . CADENA ';'  (90)

	CADENA  shift 94
	.  error


state 60
	sentencia_control_repeat : REPEAT '(' . declaracion_repeat ')' BEGIN conjunto_sentencias_repeat END ';'  (91)

	ID  shift 95
	.  error

	declaracion_repeat  goto 96
	asignacion_repeat  goto 97
	variable_repeat  goto 98


state 61
	programa : nombre_programa bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END . ';'  (1)

	';'  shift 99
	.  error


state 62
	conjunto_sentencia_ejecutable : sentencia_ejecutable conjunto_sentencia_ejecutable .  (42)

	.  reduce 42


state 63
	asignacion : operador_asignacion ":=" . expresioncompuesta ';'  (49)

	ID  shift 48
	CTE  shift 49
	'('  shift 64
	'-'  shift 51
	.  error

	expresion  goto 65
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	expresioncompuesta  goto 100
	termino  goto 57


state 64
	expresioncompuesta : '(' . expresion ')'  (52)
	expresioncompuesta : '(' . expresion  (55)

	ID  shift 48
	CTE  shift 49
	'-'  shift 51
	.  error

	expresion  goto 101
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 57


state 65
	expresioncompuesta : expresion .  (53)
	expresioncompuesta : expresion . ')'  (54)
	expresion : expresion . '+' termino  (56)
	expresion : expresion . '-' termino  (57)

	')'  shift 102
	'+'  shift 88
	'-'  shift 89
	';'  reduce 53


state 66
	asignacion : operador_asignacion expresioncompuesta . ';'  (50)

	';'  shift 103
	.  error


state 67
	parametro : '(' . tipo nombre_parametro ')'  (28)
	parametro : '(' . ID ')'  (30)
	parametro : '(' . tipo ')'  (31)
	parametro : '(' . ')'  (32)
	parametro : '(' . tipo ID  (33)

	ID  shift 104
	INT  shift 7
	SINGLE  shift 8
	')'  shift 105
	.  error

	tipo  goto 106


state 68
	parametro : tipo . ID ')'  (29)

	ID  shift 107
	.  error


state 69
	cabeza_funcion : tipo FUNC nombre_ambito parametro .  (21)

	.  reduce 21


state 70
	conjunto_declaracion_variables : conjunto_declaracion_variables ',' nombre_declaracion .  (13)

	.  reduce 13


state 71
	pre_condicion : PRE . ':' '(' condicion ')' ',' CADENA ';'  (22)
	pre_condicion : PRE . ':' condicion ')' ',' CADENA ';'  (23)
	pre_condicion : PRE . ':' '(' ')' ',' CADENA ';'  (24)
	pre_condicion : PRE . ':' '(' condicion ',' CADENA ';'  (25)
	pre_condicion : PRE . ':' '(' condicion ')' CADENA ';'  (26)
	pre_condicion : PRE . ':' '(' condicion ')' ',' ';'  (27)

	':'  shift 108
	.  error


state 72
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable . RETURN retorno ';' END ';'  (19)

	RETURN  shift 109
	.  error


state 73
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas BEGIN pre_condicion . conjunto_sentencia_ejecutable RETURN retorno ';' END ';'  (20)

	ID  shift 29
	IF  shift 30
	PRINT  shift 31
	REPEAT  shift 32
	.  error

	conjunto_sentencia_ejecutable  goto 110
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39


state 74
	encabezado_funcion_typedef : tipo FUNC . '(' tipo ')'  (18)

	'('  shift 111
	.  error


state 75
	declaracionNuevoTipo : TYPEDEF nombre_funcion_typedef '=' encabezado_funcion_typedef ';' .  (16)

	.  reduce 16


state 76
	clausula_seleccion_if : IF '(' condicion . ')' cuerpo_if ENDIF ';'  (70)
	clausula_seleccion_if : IF '(' condicion . cuerpo_if ENDIF ';'  (72)
	condicion : condicion . operador_logico expresion  (79)

	error  shift 112
	ID  shift 29
	IF  shift 30
	THEN  shift 113
	PRINT  shift 31
	BEGIN  shift 114
	REPEAT  shift 32
	"||"  shift 78
	"&&"  shift 79
	"<>"  shift 80
	"=="  shift 81
	"<="  shift 82
	">="  shift 83
	'>'  shift 84
	'<'  shift 85
	')'  shift 115
	.  error

	bloque_sentencias_ejecutables  goto 116
	sentencia_ejecutable  goto 117
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39
	cuerpo_if  goto 118
	cuerpo_then  goto 119
	operador_logico  goto 87


state 77
	factor : '-' CTE .  (67)

	.  reduce 67


state 78
	operador_logico : "||" .  (80)

	.  reduce 80


state 79
	operador_logico : "&&" .  (81)

	.  reduce 81


state 80
	operador_logico : "<>" .  (82)

	.  reduce 82


state 81
	operador_logico : "==" .  (83)

	.  reduce 83


state 82
	operador_logico : "<=" .  (84)

	.  reduce 84


state 83
	operador_logico : ">=" .  (85)

	.  reduce 85


state 84
	operador_logico : '>' .  (86)

	.  reduce 86


state 85
	operador_logico : '<' .  (87)

	.  reduce 87


state 86
	clausula_seleccion_if : IF condicion ')' . cuerpo_if ENDIF ';'  (71)

	error  shift 112
	ID  shift 29
	IF  shift 30
	THEN  shift 113
	PRINT  shift 31
	BEGIN  shift 114
	REPEAT  shift 32
	.  error

	bloque_sentencias_ejecutables  goto 116
	sentencia_ejecutable  goto 117
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39
	cuerpo_if  goto 120
	cuerpo_then  goto 119


state 87
	condicion : condicion operador_logico . expresion  (79)

	ID  shift 48
	CTE  shift 49
	'-'  shift 51
	.  error

	expresion  goto 121
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 57


state 88
	expresion : expresion '+' . termino  (56)

	ID  shift 48
	CTE  shift 49
	'-'  shift 51
	.  error

	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 122


state 89
	expresion : expresion '-' . termino  (57)

	ID  shift 48
	CTE  shift 49
	'-'  shift 51
	.  error

	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 123


state 90
	invocacion_funcion : nombre_invocacion '(' . factor ')'  (47)

	ID  shift 124
	CTE  shift 49
	'-'  shift 51
	.  error

	factor  goto 125


state 91
	termino : termino '/' . factor  (59)
	termino : termino '/' . invocacion_funcion  (62)

	ID  shift 48
	CTE  shift 49
	'-'  shift 51
	.  error

	invocacion_funcion  goto 126
	nombre_invocacion  goto 55
	factor  goto 127


state 92
	termino : termino '*' . factor  (60)
	termino : termino '*' . invocacion_funcion  (63)

	ID  shift 48
	CTE  shift 49
	'-'  shift 51
	.  error

	invocacion_funcion  goto 128
	nombre_invocacion  goto 55
	factor  goto 129


state 93
	mensaje_pantalla : PRINT CADENA ')' . ';'  (89)

	';'  shift 130
	.  error


state 94
	mensaje_pantalla : PRINT '(' CADENA . ')' ';'  (88)
	mensaje_pantalla : PRINT '(' CADENA . ';'  (90)

	';'  shift 131
	')'  shift 132
	.  error


state 95
	variable_repeat : ID .  (97)

	.  reduce 97


state 96
	sentencia_control_repeat : REPEAT '(' declaracion_repeat . ')' BEGIN conjunto_sentencias_repeat END ';'  (91)

	')'  shift 133
	.  error


state 97
	declaracion_repeat : asignacion_repeat . ';' condicion_repeat ';' CTE  (95)

	';'  shift 134
	.  error


state 98
	asignacion_repeat : variable_repeat . '=' CTE  (96)

	'='  shift 135
	.  error


state 99
	programa : nombre_programa bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable END ';' .  (1)

	.  reduce 1


state 100
	asignacion : operador_asignacion ":=" expresioncompuesta . ';'  (49)

	';'  shift 136
	.  error


state 101
	expresioncompuesta : '(' expresion . ')'  (52)
	expresioncompuesta : '(' expresion .  (55)
	expresion : expresion . '+' termino  (56)
	expresion : expresion . '-' termino  (57)

	')'  shift 137
	'+'  shift 88
	'-'  shift 89
	';'  reduce 55


state 102
	expresioncompuesta : expresion ')' .  (54)

	.  reduce 54


state 103
	asignacion : operador_asignacion expresioncompuesta ';' .  (50)

	.  reduce 50


state 104
	parametro : '(' ID . ')'  (30)

	')'  shift 138
	.  error


state 105
	parametro : '(' ')' .  (32)

	.  reduce 32


state 106
	parametro : '(' tipo . nombre_parametro ')'  (28)
	parametro : '(' tipo . ')'  (31)
	parametro : '(' tipo . ID  (33)

	ID  shift 139
	')'  shift 140
	.  error

	nombre_parametro  goto 141


state 107
	parametro : tipo ID . ')'  (29)

	')'  shift 142
	.  error


state 108
	pre_condicion : PRE ':' . '(' condicion ')' ',' CADENA ';'  (22)
	pre_condicion : PRE ':' . condicion ')' ',' CADENA ';'  (23)
	pre_condicion : PRE ':' . '(' ')' ',' CADENA ';'  (24)
	pre_condicion : PRE ':' . '(' condicion ',' CADENA ';'  (25)
	pre_condicion : PRE ':' . '(' condicion ')' CADENA ';'  (26)
	pre_condicion : PRE ':' . '(' condicion ')' ',' ';'  (27)

	ID  shift 48
	CTE  shift 49
	'('  shift 143
	'-'  shift 51
	.  error

	condicion  goto 144
	expresion  goto 53
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 57


state 109
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas BEGIN conjunto_sentencia_ejecutable RETURN . retorno ';' END ';'  (19)

	ID  shift 48
	CTE  shift 49
	'('  shift 145
	'-'  shift 51
	.  error

	retorno  goto 146
	expresion  goto 147
	invocacion_funcion  goto 54
	nombre_invocacion  goto 55
	factor  goto 56
	termino  goto 57


state 110
	declaracionFuncion : cabeza_funcion bloque_sentencias_declarativas BEGIN pre_condicion conjunto_sentencia_ejecutable . RETURN retorno ';' END ';'  (20)

	RETURN  shift 148
	.  error


state 111
	encabezado_funcion_typedef : tipo FUNC '(' . tipo ')'  (18)

	INT  shift 7
	SINGLE  shift 8
	.  error

	tipo  goto 149


state 112
	bloque_sentencias_ejecutables : error . ';'  (40)

	';'  shift 150
	.  error


state 113
	cuerpo_then : THEN . bloque_sentencias_ejecutables  (75)

	error  shift 112
	ID  shift 29
	IF  shift 30
	PRINT  shift 31
	BEGIN  shift 114
	REPEAT  shift 32
	.  error

	bloque_sentencias_ejecutables  goto 151
	sentencia_ejecutable  goto 117
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39


state 114
	bloque_sentencias_ejecutables : BEGIN . conjunto_sentencia_ejecutable END ';'  (39)

	ID  shift 29
	IF  shift 30
	PRINT  shift 31
	REPEAT  shift 32
	.  error

	conjunto_sentencia_ejecutable  goto 152
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39


state 115
	clausula_seleccion_if : IF '(' condicion ')' . cuerpo_if ENDIF ';'  (70)

	error  shift 112
	ID  shift 29
	IF  shift 30
	THEN  shift 113
	PRINT  shift 31
	BEGIN  shift 114
	REPEAT  shift 32
	.  error

	bloque_sentencias_ejecutables  goto 116
	sentencia_ejecutable  goto 117
	asignacion  goto 35
	mensaje_pantalla  goto 36
	clausula_seleccion_if  goto 37
	sentencia_control_repeat  goto 38
	operador_asignacion  goto 39
	cuerpo_if  goto 153
	cuerpo_then  goto 119


state 116
	cuerpo_then : bloque_sentencias_ejecutables .  (76)

	.  reduce 76


state 117
	bloque_sentencias_ejecutables : sentencia_ejecutable .  (38)

	.  reduce 38


state 118
	clausula_seleccion_if : IF '(' condicion cuerpo_if . ENDIF ';'  (72)

	ENDIF  shift 154
	.  error


state 119
	cuerpo_if : cuerpo_then .  (73)
	cuerpo_if : cuerpo_then . cuerpo_else  (74)

	ELSE  shift 155
	ENDIF  reduce 73

	cuerpo_else  goto 156


state 120
	clausula_seleccion_if : IF condicion ')' cuerpo_if . ENDIF ';'  (71)

	ENDIF  shift 157
	.  error


state 121
	expresion : expresion . '+' termino  (56)
	expresion : expresion . '-' termino  (57)
	condicion : condicion operador_logico expresion .  (79)

	'+'  shift 88
	'-'  shift 89
	error  reduce 79
	ID  reduce 79
	IF  reduce 79
	THEN  reduce 79
	PRINT  reduce 79
	BEGIN  reduce 79
	REPEAT  reduce 79
	"||"  reduce 79
	"&&"  reduce 79
	"<>"  reduce 79
	"=="  reduce 79
	"<="  reduce 79
	">="  reduce 79
	'>'  reduce 79
	'<'  reduce 79
	','  reduce 79
	')'  reduce 79

